@@ -71,10 +71,10 @@ def main():
     filenames = args.input_sequence_filename
 
     for name in args.input_sequence_filename:
-        check_file_status(name)
+        check_file_status(name, False)
 
-    check_space(args.input_sequence_filename)
-    check_space_for_hashtable(args.n_tables * args.min_tablesize)
+    check_space(args.input_sequence_filename, False)
+    check_space_for_hashtable(args.n_tables * args.min_tablesize, False)
 
     print 'Saving k-mer counting table to %s' % base
     print 'Loading sequences from %s' % repr(filenames)
